plugins {
    id 'org.springframework.boot' version '3.1.4' apply false
    id 'io.spring.dependency-management' version '1.1.3'
    id 'groovy'
    id 'maven-publish'
    id 'java-library'
    id 'com.github.ben-manes.versions' version '0.48.0'
    id 'se.patrikerdes.use-latest-versions' version '0.2.18'
}

group = 'no.fintlabs'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
    repositories {
        mavenLocal()
    }
}

repositories {
    mavenLocal()
    repositories {
        maven {
            url "https://repo.fintlabs.no/releases"
        }
    }
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
    }
}

dependencies {
    api 'org.springframework.boot:spring-boot-starter-webflux'

    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'no.fintlabs:fint-resource-server-security:1.1.1-rc-3'
    implementation 'commons-codec:commons-codec:1.16.0'
    implementation 'com.google.guava:guava:32.1.2-jre'
    implementation 'no.fintlabs:fint-antlr:1.1.1'


    implementation 'no.fintlabs:fint-core-cache:0.3.1'
    implementation 'no.fintlabs:fint-kafka:3.0.0-rc-1'
    implementation 'no.fint:fint-event-model:3.0.2'
    implementation('no.fintlabs:fint-relations:2.2.2') {
        exclude group: 'com.github.springfox.loader'
        exclude group: 'org.springframework.boot'
    }
    implementation 'no.fintlabs:fint-core-infra-models:1.1.2'
    implementation 'no.fint:fint-felles-model-java:3.15.0'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'cglib:cglib-nodep:3.3.0'
    testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
    testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
}

test {
    useJUnitPlatform()
}

apply from: 'https://raw.githubusercontent.com/FINTLabs/fint-buildscripts/master/reposilite.ga.gradle'